--- a/404.html
+++ b/404.html
@@ -4,24 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oops! - NStrike Studios</title>
-    <link rel="stylesheet" href="main.css">
-    <script src="script.js"></script>
 </head>
-<style>
-    button:hover {
-        background-color: #000;
-        color: #fff;
-    }
-</style>
 <body>
-    <section style="background: #ff3131 center/cover no-repeat;" class="hero">
-        <div class="hero-overlay">
-            <h1 style="color: #fff; font-size: 80px;">Oops!</h1>
-            <br>
-            <p>The page you are looking for doesn't exist.</p>
-            <br>
-        <a href="/"><button>Back to Home</button></a>
-        </div>
-    </section>
+    <h1>Oops!</h1>
+    <p>The page you are looking for doesn't exist.</p>
+    <a href"/">Back to Home</a>
 </body>
 </html>
