--- a/404.html
+++ b/404.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Oops!</h1>
     <p>The page you are looking for doesn't exist.</p>
-    <a href"/">Back to Home</a>
+    <a href="/">Back to Home</a>
 </body>
 </html>
