--- a/index.html
+++ b/index.html
@@ -54,7 +54,15 @@
           <div class="game-title">NStrike</div>
           <div class="game-genre">First-Person Shooter</div>
           <br>
-          <a href="" target="_blank"><button class="view-button">Learn More</button></a>
+          <a href="https://www.roblox.com/games/113072726888388/" target="_blank"><button class="view-button">Play Game</button></a>
+      </div>
+
+      <div class="game-card">
+          <img src="assets/placeholder-1920x1080.png" alt="Game Thumbnail">
+          <div class="game-title">AT:5AM</div>
+          <div class="game-genre">Social Hangout</div>
+          <br>
+          <a href="" target="_blank"><button class="view-button">Coming Soon</button></a>
       </div>
     </div>
   </div>
