--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
       <div class="game-card">
           <img src="assets/placeholder-1920x1080.png" alt="Game Thumbnail">
-          <div class="game-title">AT:5AM</div>
-          <div class="game-genre">Social Hangout</div>
+          <div class="game-title">Game Title</div>
+          <div class="game-genre">Game Genre</div>
           <br>
-          <a href="" target="_blank"><button class="view-button">Coming Soon</button></a>
+          <a href="#" target="_blank"><button class="view-button">Play Game</button></a>
       </div>
     </div>
   </div>
