--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
     <section class="hero">
       <div class="herooverlay">
        <div class="Logo-head"><strong>NSTRIKE</strong><br><span>STUDIOS</span></div>
+       <span class="menu-btn" onclick="openNav()">&#9776; Menu</span>
       </div>
     </section>
+    <div id="myNav" class="overlay">
+        <span class="closebtn" onclick="closeNav()">&times;</span>
+        <div class="Logo-head"><strong style="font-weight: 900;">NStrike</strong><br><span style="font-weight: 400;">Studios</span></div>
+        <br>
+        <a href="games.html">Games</a>
+        <a href="https://nstrikestudios.tumblr.com/" target="_blank">News</a>
+        <a href="about.html">About</a>
+        <a href="" onclick="alert('This service is not available at this time.')">Merch</a>
+    </div> 
     <br>
     <section class="games" id="games">
     <div class="heading">Our games</div>
