--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <span class="closebtn" onclick="closeNav()">&times;</span>
         <div class="Logo-head"><strong style="font-weight: 900;">NStrike</strong><br><span style="font-weight: 400;">Studios</span></div>
         <br>
-        <a href="games.html">Games</a>
-        <a href="https://nstrikestudios.tumblr.com/" target="_blank">News</a>
-        <a href="about.html">About</a>
+        <a href="#games">Games</a>
+        <a href="#contact">Contact</a>
+        <a href="#follow">Follow</a>
         <a href="" onclick="alert('This service is not available at this time.')">Merch</a>
     </div> 
     <br>
