--- a/forum.html
+++ b/forum.html
@@ -67,10 +67,10 @@
                 id: Date.now(),
                 title: "กระทู้แรกของฉัน",
                 content: "นี่คือกระทู้แรกในฟอรัม ยินดีต้อนรับทุกคน!",
-                author: "แอดมิน",
+                author: "<a href="https://fb.com/slinthh/">สรันศักดิ์</a>,
                 date: new Date().toLocaleString('th-TH'),
                 comments: [
-                    { author: "ผู้เยี่ยมชม", content: "ยินดีด้วยกับกระทู้แรก!", date: new Date().toLocaleString('th-TH') }
+                    { author: "หนูทดลอง", content: "congrats!", date: new Date().toLocaleString('th-TH') }
                 ]
             }
         ];
