--- a/forum.html
+++ b/forum.html
@@ -56,7 +56,7 @@
     </style>
 </head>
 <body>
-    <h2>กระทู้ล่าสุด <button onclick="addThread()">สร้างกระทู้ใหม่</button></h2>
+    <h2>กระทู้ล่าสุด <button onclick="addThread()">สร้างกระทู้ใหม่ (รีโหลดหน้าเพจแล้วทุกอย่างหายนะครับ 😂😂😂)</button></h2>
     <div class="forum-container" id="forumContainer">
         <!-- กระทู้จะถูกเพิ่มด้วย JavaScript -->
     </div>
@@ -67,7 +67,7 @@
                 id: Date.now(),
                 title: "กระทู้แรกของฉัน",
                 content: "นี่คือกระทู้แรกในฟอรัม ยินดีต้อนรับทุกคน!",
-                author: "<a href="https://fb.com/slinthh/">สรันศักดิ์</a>,
+                author: "แอดมินสรันศักดิ์"
                 date: new Date().toLocaleString('th-TH'),
                 comments: [
                     { author: "หนูทดลอง", content: "congrats!", date: new Date().toLocaleString('th-TH') }
