--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
     <a href="https://discord.gg/3aSmRDVQrTs" class="discord" target="_blank"><i class="fab fa-discord"></i> Discord</a>
     <br>
     <br>
+    <a href="https://nstrikestudios-blog.tumblr.com" class="tumblr" target="_blank"><i class="fab fa-tumblr"></i> Tumblr Blog</a>
+    <br>
+    <br>
     <a href="https://www.youtube.com/@nstrikestudios" class="youtube" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
 </section>
 
