--- a/index.html
+++ b/index.html
@@ -74,10 +74,13 @@
     <a href="https://discord.gg/3aSmRDVQrTs" class="discord" target="_blank"><i class="fab fa-discord"></i> Discord</a>
     <br>
     <br>
-    <a href="https://nstrikestudios-blog.tumblr.com" class="tumblr" target="_blank"><i class="fab fa-tumblr"></i> Tumblr Blog</a>
+    <a href="https://nstrikestudios-blog.tumblr.com" class="tumblr" target="_blank"><i class="fab fa-tumblr"></i> Tumblr</a>
     <br>
     <br>
     <a href="https://www.youtube.com/@nstrikestudios" class="youtube" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+    <br>
+    <br>
+    <a href="https://www.reddit.com/r/nstrikestudios" class="reddit" target="_blank"><i class="fab fa-reddit"></i> Reddit</a>
 </section>
 
 <br>
